--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
         </ul>
     </div>
     <!-- handcrafted end -->
+    <div class="slider">
+        <div class="slide-left">
+            <img src="images/glass.png" alt="">
+        </div>
+        <div class="slide-between"> <br>
+            <p id="para"> Attention Starbucks Fans!</p><br>
+            <p id="sign"> Signature Milkshakes</p><br>
+            <p id="para"> Satisfy your sweet tooth with our signature milkshakes. Indulge today in these coffee-free  <br> versions. </p>
+            <br>
+            <p id="price">Starting From</p>
+            <p id="price-value">₹ 330.00</p>
+        </div>
+        <div class="slide-right">
+            <a href="#">Order Now</a>
+        </div>
+    </div>
     <!-- about start -->
     <div class="about-cont">
         <div class="about-head">
