--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </ul>
     </div>
     <!-- handcrafted end -->
+    <!--slider start  -->
     <div class="slider">
         <div class="slide-left">
             <img src="images/glass.png" alt="">
@@ -69,6 +70,56 @@
             <a href="#">Order Now</a>
         </div>
     </div>
+    <!--slider start  -->
+    <!-- recomend start -->
+    <div class="recomend">
+        <div class="rec">
+            <p>Barista Recommends</p>
+            <span>View more</span>
+        </div>
+        <div class="rec-slide">
+
+            <div class="box">
+                <div class="a">
+                    <img src="images/box1.webp" alt="">
+                    <p>₹ 194.25</p>
+                </div>
+                <div class="b">
+                    <img src="images/nonveg.svg" alt="">
+                    <p id="x">Bhuna Chicken Puff</p>
+                    <p id="y">PER SERVE (85 g) - 390 Kcal</p>
+                    <div class="box-button"><p>Add Item</p></div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="a">
+                    <img src="images/box2.webp" alt="">
+                    <p>₹ 288.75</p>
+                </div>
+                <div class="b">
+                    <img src="images/veg.svg" alt="">
+                    <p id="x">Chocolate Brownie Cupcake</p>
+                    <p id="y">PER SERVE (80 g) - 416kcal</p>
+                    <div class="box-button"><p>Add Item</p></div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="a">
+                    <img src="images/box3.webp" alt="">
+                    <p>₹ 262.50</p>
+                </div>
+                <div class="b">
+                    <img src="images/veg.svg" alt="">
+                    <p id="x">Three Dip Nachos</p>
+                    <p id="y">PER SERVE (180 g) - 513 Kcal
+                    </p>
+                    <div class="box-button"><p>Add Item</p></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- recomend end -->
     <!-- about start -->
     <div class="about-cont">
         <div class="about-head">
