git page in progress.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="left">
             <img src="images/logo.png" alt="">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Gift</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/gift.html">Gift</a></li>
                 <li><a href="#">Order</a></li>
                 <li><a href="#">Pay</a></li>
                 <li><a href="#">Store</a></li>
