order header completed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/gift.html">Gift</a></li>
-                <li><a href="#">Order</a></li>
+                <li><a href="/order.html">Order</a></li>
                 <li><a href="#">Pay</a></li>
                 <li><a href="#">Store</a></li>
             </ul>
